Upload file changes :: sonar cube.