@@ -5,15 +5,12 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
-import org.springframework.transaction.TransactionDefinition;
 import org.springframework.transaction.TransactionStatus;
-import org.springframework.transaction.support.DefaultTransactionDefinition;
 
 import com.pennant.app.util.ErrorUtil;
 import com.pennant.backend.dao.finance.FinanceMainDAO;
@@ -46,7 +43,7 @@ import com.pennanttech.pff.file.UploadTypes;
 import com.pennanttech.pff.receipt.constants.Allocation;
 import com.pennapps.core.util.ObjectUtil;
 
-public class ChequeUploadServiceImpl extends AUploadServiceImpl {
+public class ChequeUploadServiceImpl extends AUploadServiceImpl<ChequeUpload> {
 	private static final Logger logger = LogManager.getLogger(ChequeUploadServiceImpl.class);
 
 	private ChequeUploadDAO chequeUploadDAO;
@@ -57,12 +54,17 @@ public class ChequeUploadServiceImpl extends AUploadServiceImpl {
 	private ChequeHeaderDAO chequeHeaderDAO;
 
 	@Override
+	protected ChequeUpload getDetail(Object object) {
+		if (object instanceof ChequeUpload detail) {
+			return detail;
+		}
+
+		throw new AppException(IN_VALID_OBJECT);
+	}
+
+	@Override
 	public void doApprove(List<FileUploadHeader> headers) {
 		new Thread(() -> {
-
-			DefaultTransactionDefinition txDef = new DefaultTransactionDefinition();
-			txDef.setPropagationBehavior(TransactionDefinition.PROPAGATION_REQUIRES_NEW);
-			TransactionStatus txStatus = null;
 
 			for (FileUploadHeader header : headers) {
 				Map<String, List<ChequeUpload>> map = new HashMap<>();
@@ -156,39 +158,7 @@ public class ChequeUploadServiceImpl extends AUploadServiceImpl {
 						}
 					}
 
-					try {
-						txStatus = transactionManager.getTransaction(txDef);
-
-						if (!addcheques.isEmpty()) {
-							chequeHeader.setChequeDetailList(addcheques);
-							chequeHeader.setNoOfCheques(fetchChequeSize(addcheques));
-							process(chequeHeader, chequeUploads);
-						}
-
-						int chequeSize = 0;
-						if (!delcheques.isEmpty()) {
-							chequeHeader.setChequeDetailList(delcheques);
-							for (ChequeDetail detail : delcheques) {
-								if (InstrumentType.isPDC(detail.getChequeType())) {
-									chequeSize++;
-								}
-								chequeDetailDAO.deleteCheques(detail);
-							}
-
-						}
-						chequeHeader.setNoOfCheques(chequeSize);
-						chequeHeaderDAO.updatesize(chequeHeader);
-
-						transactionManager.commit(txStatus);
-					} catch (Exception e) {
-						logger.error(Literal.EXCEPTION, e);
-
-						if (txStatus != null) {
-							transactionManager.rollback(txStatus);
-						}
-					} finally {
-						txStatus = null;
-					}
+					processCheques(chequeUploads, chequeHeader, addcheques, delcheques);
 				}
 
 				for (String finReference : finReferences) {
@@ -211,24 +181,50 @@ public class ChequeUploadServiceImpl extends AUploadServiceImpl {
 				logger.info("Processed the File {}", header.getFileName());
 
 				try {
-					txStatus = transactionManager.getTransaction(txDef);
-
 					updateHeader(headers, true);
 
-					transactionManager.commit(txStatus);
 				} catch (Exception e) {
 					logger.error(Literal.EXCEPTION, e);
-
-					if (txStatus != null) {
-						transactionManager.rollback(txStatus);
-					}
-				} finally {
-					txStatus = null;
 				}
 			}
 
 		}).start();
 
+	}
+
+	private void processCheques(List<ChequeUpload> chequeUploads, ChequeHeader chequeHeader,
+			List<ChequeDetail> addcheques, List<ChequeDetail> delcheques) {
+		TransactionStatus txStatus = getTransactionStatus();
+
+		try {
+			if (!addcheques.isEmpty()) {
+				chequeHeader.setChequeDetailList(addcheques);
+				chequeHeader.setNoOfCheques(fetchChequeSize(addcheques));
+				process(chequeHeader, chequeUploads);
+			}
+
+			int chequeSize = 0;
+			if (!delcheques.isEmpty()) {
+				chequeHeader.setChequeDetailList(delcheques);
+				for (ChequeDetail detail : delcheques) {
+					if (InstrumentType.isPDC(detail.getChequeType())) {
+						chequeSize++;
+					}
+					chequeDetailDAO.deleteCheques(detail);
+				}
+
+			}
+			chequeHeader.setNoOfCheques(chequeSize);
+			chequeHeaderDAO.updatesize(chequeHeader);
+
+			transactionManager.commit(txStatus);
+		} catch (Exception e) {
+			logger.error(Literal.EXCEPTION, e);
+
+			if (txStatus != null) {
+				transactionManager.rollback(txStatus);
+			}
+		}
 	}
 
 	private boolean isNotRelizedOrPresent(ChequeUpload upload) {
@@ -248,17 +244,18 @@ public class ChequeUploadServiceImpl extends AUploadServiceImpl {
 
 	@Override
 	public void doReject(List<FileUploadHeader> headers) {
-		List<Long> headerIdList = headers.stream().map(FileUploadHeader::getId).collect(Collectors.toList());
+		List<Long> headerIdList = headers.stream().map(FileUploadHeader::getId).toList();
 
-		DefaultTransactionDefinition txDef = new DefaultTransactionDefinition();
-		txDef.setPropagationBehavior(TransactionDefinition.PROPAGATION_REQUIRES_NEW);
-		TransactionStatus txStatus = null;
+		TransactionStatus txStatus = getTransactionStatus();
 
 		try {
-			txStatus = transactionManager.getTransaction(txDef);
 			chequeUploadDAO.update(headerIdList, ERR_CODE, ERR_DESC, EodConstants.PROGRESS_FAILED);
 
-			headers.forEach(h1 -> h1.setRemarks(ERR_DESC));
+			headers.forEach(h1 -> {
+				h1.setRemarks(ERR_DESC);
+				h1.getUploadDetails().addAll(chequeUploadDAO.getDetails(h1.getId()));
+			});
+
 			updateHeader(headers, false);
 
 			transactionManager.commit(txStatus);
@@ -273,15 +270,7 @@ public class ChequeUploadServiceImpl extends AUploadServiceImpl {
 
 	@Override
 	public void doValidate(FileUploadHeader header, Object object) {
-		ChequeUpload upload = null;
-
-		if (object instanceof ChequeUpload) {
-			upload = (ChequeUpload) object;
-		}
-
-		if (upload == null) {
-			throw new AppException("Invalid Data transferred...");
-		}
+		ChequeUpload upload = getDetail(object);
 
 		ChequeDetail cd = upload.getChequeDetail();
 
@@ -380,7 +369,7 @@ public class ChequeUploadServiceImpl extends AUploadServiceImpl {
 	}
 
 	@Override
-	public void validate(DataEngineAttributes attributes, MapSqlParameterSource record) throws Exception {
+	public void validate(DataEngineAttributes attributes, MapSqlParameterSource paramSource) throws Exception {
 		logger.debug(Literal.ENTERING);
 
 		Long headerID = ObjectUtil.valueAsLong(attributes.getParameterMap().get("HEADER_ID"));
@@ -393,26 +382,26 @@ public class ChequeUploadServiceImpl extends AUploadServiceImpl {
 
 		ChequeUpload detail = new ChequeUpload();
 
-		detail.setReference(ObjectUtil.valueAsString(record.getValue("finReference")));
-		detail.setAction(ObjectUtil.valueAsString(record.getValue("action")));
+		detail.setReference(ObjectUtil.valueAsString(paramSource.getValue("finReference")));
+		detail.setAction(ObjectUtil.valueAsString(paramSource.getValue("action")));
 
 		ChequeDetail cd = new ChequeDetail();
 
-		cd.setChequeType(ObjectUtil.valueAsString(record.getValue("chequeType")));
-		cd.setChequeSerialNumber(ObjectUtil.valueAsString(record.getValue("chequeSerialNo")));
-		cd.setAccountType(ObjectUtil.valueAsString(record.getValue("accountType")));
-		cd.setAccHolderName(ObjectUtil.valueAsString(record.getValue("accHolderName")));
-		cd.setAccountNo(ObjectUtil.valueAsString(record.getValue("accountNo")));
-		cd.setIfsc(ObjectUtil.valueAsString(record.getValue("ifsc")));
-		cd.setMicr(ObjectUtil.valueAsString(record.getValue("micr")));
-		cd.setAmount(ObjectUtil.valueAsBigDecimal(record.getValue("amount")));
-		cd.setChequeDate(ObjectUtil.valueAsDate(record.getValue("chequeDate")));
+		cd.setChequeType(ObjectUtil.valueAsString(paramSource.getValue("chequeType")));
+		cd.setChequeSerialNumber(ObjectUtil.valueAsString(paramSource.getValue("chequeSerialNo")));
+		cd.setAccountType(ObjectUtil.valueAsString(paramSource.getValue("accountType")));
+		cd.setAccHolderName(ObjectUtil.valueAsString(paramSource.getValue("accHolderName")));
+		cd.setAccountNo(ObjectUtil.valueAsString(paramSource.getValue("accountNo")));
+		cd.setIfsc(ObjectUtil.valueAsString(paramSource.getValue("ifsc")));
+		cd.setMicr(ObjectUtil.valueAsString(paramSource.getValue("micr")));
+		cd.setAmount(ObjectUtil.valueAsBigDecimal(paramSource.getValue("amount")));
+		cd.setChequeDate(ObjectUtil.valueAsDate(paramSource.getValue("chequeDate")));
 
 		detail.setChequeDetail(cd);
 
 		doValidate(header, detail);
 
-		updateProcess(header, detail, record);
+		updateProcess(header, detail, paramSource);
 	}
 
 	private int fetchChequeSize(List<ChequeDetail> cheques) {
