@@ -5,16 +5,13 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
-import org.springframework.transaction.TransactionDefinition;
 import org.springframework.transaction.TransactionStatus;
-import org.springframework.transaction.support.DefaultTransactionDefinition;
 
 import com.pennant.app.util.SysParamUtil;
 import com.pennant.backend.dao.finance.FinanceMainDAO;
@@ -40,25 +37,30 @@ import com.pennanttech.pennapps.core.util.DateUtil;
 import com.pennanttech.pff.file.UploadTypes;
 import com.pennapps.core.util.ObjectUtil;
 
-public class ExcessTransferUploadServiceImpl extends AUploadServiceImpl {
+public class ExcessTransferUploadServiceImpl extends AUploadServiceImpl<ExcessTransferUpload> {
 	private static final Logger logger = LogManager.getLogger(ExcessTransferUploadServiceImpl.class);
 
 	private ExcessTransferUploadDAO excessTransferUploadDAO;
 	private FinanceMainDAO financeMainDAO;
 	private FinExcessAmountDAO finExcessAmountDAO;
 	private ExcessTransferService excessTransferService;
+	
+	public ExcessTransferUploadServiceImpl(){
+		super();
+	}
+
+	@Override
+	protected ExcessTransferUpload getDetail(Object object) {
+		if (object instanceof ExcessTransferUpload detail) {
+			return detail;
+		}
+
+		throw new AppException(IN_VALID_OBJECT);
+	}
 
 	@Override
 	public void doValidate(FileUploadHeader header, Object object) {
-		ExcessTransferUpload detail = null;
-
-		if (object instanceof ExcessTransferUpload) {
-			detail = (ExcessTransferUpload) object;
-		}
-
-		if (detail == null) {
-			throw new AppException("Invalid Data transferred...");
-		}
+		ExcessTransferUpload detail = getDetail(object);
 
 		String reference = detail.getReference();
 		detail.setReference(reference);
@@ -129,11 +131,6 @@ public class ExcessTransferUploadServiceImpl extends AUploadServiceImpl {
 	@Override
 	public void doApprove(List<FileUploadHeader> headers) {
 		new Thread(() -> {
-
-			DefaultTransactionDefinition txDef = new DefaultTransactionDefinition(
-					TransactionDefinition.PROPAGATION_REQUIRES_NEW);
-			TransactionStatus txStatus = null;
-
 			Date appDate = SysParamUtil.getAppDate();
 
 			for (FileUploadHeader header : headers) {
@@ -159,40 +156,9 @@ public class ExcessTransferUploadServiceImpl extends AUploadServiceImpl {
 					}
 				}
 
+				TransactionStatus txStatus = getTransactionStatus();
 				try {
-					txStatus = transactionManager.getTransaction(txDef);
-
 					process(process);
-
-					for (ExcessTransferUpload fc : details) {
-						if (fc.getProgress() == EodConstants.PROGRESS_FAILED) {
-							failRecords++;
-							sucessRecords--;
-						}
-
-						header.getUploadDetails().add(fc);
-					}
-
-					excessTransferUploadDAO.update(details);
-
-					header.setSuccessRecords(sucessRecords);
-					header.setFailureRecords(failRecords);
-
-					StringBuilder remarks = new StringBuilder("Process Completed");
-
-					if (failRecords > 0) {
-						remarks.append(" with exceptions, ");
-					}
-
-					remarks.append(" Total Records : ").append(header.getTotalRecords());
-					remarks.append(" Success Records : ").append(sucessRecords);
-					remarks.append(" Failed Records : ").append(failRecords);
-
-					List<FileUploadHeader> headerList = new ArrayList<>();
-					headerList.add(header);
-
-					updateHeader(headerList, true);
-
 					transactionManager.commit(txStatus);
 				} catch (Exception e) {
 					logger.error(Literal.EXCEPTION, e);
@@ -202,6 +168,30 @@ public class ExcessTransferUploadServiceImpl extends AUploadServiceImpl {
 					}
 				} finally {
 					txStatus = null;
+				}
+
+				for (ExcessTransferUpload fc : details) {
+					if (fc.getProgress() == EodConstants.PROGRESS_FAILED) {
+						failRecords++;
+						sucessRecords--;
+					}
+
+					header.getUploadDetails().add(fc);
+				}
+
+				try {
+					excessTransferUploadDAO.update(details);
+
+					header.setSuccessRecords(sucessRecords);
+					header.setFailureRecords(failRecords);
+
+					List<FileUploadHeader> headerList = new ArrayList<>();
+					headerList.add(header);
+
+					updateHeader(headerList, true);
+
+				} catch (Exception e) {
+					logger.error(Literal.EXCEPTION, e);
 				}
 
 				logger.info("Processed the File {}", header.getFileName());
@@ -219,8 +209,7 @@ public class ExcessTransferUploadServiceImpl extends AUploadServiceImpl {
 					exc.getTransferFromType());
 
 			List<FinExcessAmount> excessList = existingExcess.stream()
-					.sorted((l1, l2) -> DateUtil.compare(l1.getValueDate(), l2.getValueDate()))
-					.collect(Collectors.toList());
+					.sorted((l1, l2) -> DateUtil.compare(l1.getValueDate(), l2.getValueDate())).toList();
 
 			BigDecimal transferAmount = exc.getTransferAmount();
 			for (FinExcessAmount excess : excessList) {
@@ -289,18 +278,17 @@ public class ExcessTransferUploadServiceImpl extends AUploadServiceImpl {
 
 	@Override
 	public void doReject(List<FileUploadHeader> headers) {
-		List<Long> headerIdList = headers.stream().map(FileUploadHeader::getId).collect(Collectors.toList());
+		List<Long> headerIdList = headers.stream().map(FileUploadHeader::getId).toList();
 
-		DefaultTransactionDefinition txDef = new DefaultTransactionDefinition(
-				TransactionDefinition.PROPAGATION_REQUIRES_NEW);
-		TransactionStatus txStatus = null;
+		TransactionStatus txStatus = getTransactionStatus();
 
 		try {
-			txStatus = transactionManager.getTransaction(txDef);
-
 			excessTransferUploadDAO.update(headerIdList, ERR_CODE, ERR_DESC, EodConstants.PROGRESS_FAILED);
 
-			headers.forEach(h1 -> h1.setRemarks(ERR_DESC));
+			headers.forEach(h1 -> {
+				h1.setRemarks(ERR_DESC);
+				h1.getUploadDetails().addAll(excessTransferUploadDAO.getDetails(h1.getId()));
+			});
 			updateHeader(headers, false);
 
 			transactionManager.commit(txStatus);
@@ -324,13 +312,13 @@ public class ExcessTransferUploadServiceImpl extends AUploadServiceImpl {
 	}
 
 	@Override
-	public void validate(DataEngineAttributes attributes, MapSqlParameterSource record) throws Exception {
+	public void validate(DataEngineAttributes attributes, MapSqlParameterSource paramSource) throws Exception {
 		logger.debug(Literal.ENTERING);
 
-		ExcessTransferUpload transfer = (ExcessTransferUpload) ObjectUtil.valueAsObject(record,
+		ExcessTransferUpload transfer = (ExcessTransferUpload) ObjectUtil.valueAsObject(paramSource,
 				ExcessTransferUpload.class);
 
-		transfer.setReference(ObjectUtil.valueAsString(record.getValue("finReference")));
+		transfer.setReference(ObjectUtil.valueAsString(paramSource.getValue("finReference")));
 
 		Map<String, Object> parameterMap = attributes.getParameterMap();
 
@@ -341,7 +329,7 @@ public class ExcessTransferUploadServiceImpl extends AUploadServiceImpl {
 
 		doValidate(header, transfer);
 
-		updateProcess(header, transfer, record, "C", "R");
+		updateProcess(header, transfer, paramSource, "C", "R");
 
 		logger.debug(Literal.LEAVING);
 	}
