@@ -2,15 +2,12 @@ package com.pennant.pff.mandate.service.impl;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
-import org.springframework.transaction.TransactionDefinition;
 import org.springframework.transaction.TransactionStatus;
-import org.springframework.transaction.support.DefaultTransactionDefinition;
 
 import com.pennant.app.util.SysParamUtil;
 import com.pennant.backend.dao.mandate.MandateUploadDAO;
@@ -30,22 +27,49 @@ import com.pennanttech.pff.core.RequestSource;
 import com.pennanttech.pff.file.UploadTypes;
 import com.pennapps.core.util.ObjectUtil;
 
-public class MandateUploadServiceImpl extends AUploadServiceImpl {
+public class MandateUploadServiceImpl extends AUploadServiceImpl<MandateUpload> {
 	private static final Logger logger = LogManager.getLogger(MandateUploadServiceImpl.class);
 
 	private MandateUploadDAO mandateUploadDAO;
 	private MandateService mandateService;
+
+	public MandateUploadServiceImpl() {
+		super();
+	}
+
+	@Override
+	protected MandateUpload getDetail(Object object) {
+		if (object instanceof MandateUpload detail) {
+			return detail;
+		}
+
+		throw new AppException(IN_VALID_OBJECT);
+	}
+
+	private Mandate process(MandateUpload detail, Mandate mandate) {
+		Mandate response = null;
+
+		TransactionStatus txStatus = getTransactionStatus();
+
+		try {
+			response = mandateService.createMandates(mandate);
+			transactionManager.commit(txStatus);
+		} catch (Exception e) {
+			if (txStatus != null) {
+				transactionManager.rollback(txStatus);
+			}
+			detail.setProgress(EodConstants.PROGRESS_FAILED);
+			detail.setErrorCode(ERR_CODE);
+			detail.setErrorDesc(e.getMessage());
+		}
+		return response;
+	}
 
 	@Override
 	public void doApprove(List<FileUploadHeader> headers) {
 		logger.debug(Literal.ENTERING);
 
 		new Thread(() -> {
-
-			DefaultTransactionDefinition txDef = new DefaultTransactionDefinition(
-					TransactionDefinition.PROPAGATION_REQUIRES_NEW);
-			TransactionStatus txStatus = null;
-
 			Date appDate = SysParamUtil.getAppDate();
 
 			for (FileUploadHeader header : headers) {
@@ -57,8 +81,6 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 				int failRecords = 0;
 
 				try {
-					txStatus = transactionManager.getTransaction(txDef);
-
 					for (MandateUpload detail : details) {
 						doValidate(header, detail);
 
@@ -69,7 +91,15 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 						Mandate mandate = detail.getMandate();
 						mandate.setUserDetails(header.getUserDetails());
 						mandate.setSourceId(RequestSource.UPLOAD.name());
-						Mandate response = mandateService.createMandates(mandate);
+
+						Mandate response = process(detail, mandate);
+
+						if (response == null) {
+							detail.setProgress(EodConstants.PROGRESS_FAILED);
+							detail.setErrorCode(ERR_CODE);
+							detail.setErrorDesc("");
+							continue;
+						}
 
 						ErrorDetail error = response.getError();
 						if (error != null) {
@@ -89,45 +119,18 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 					}
 
 					mandateUploadDAO.update(details);
-					transactionManager.commit(txStatus);
 				} catch (Exception e) {
 					logger.error(Literal.EXCEPTION, e);
-
-					if (txStatus != null) {
-						transactionManager.rollback(txStatus);
-					}
-				} finally {
-					txStatus = null;
 				}
 
 				header.setSuccessRecords(sucessRecords);
 				header.setFailureRecords(failRecords);
-
-				StringBuilder remarks = new StringBuilder("Process Completed");
-
-				if (failRecords > 0) {
-					remarks.append(" with exceptions, ");
-				}
-
-				remarks.append(" Total Records : ").append(header.getTotalRecords());
-				remarks.append(" Success Records : ").append(sucessRecords);
-				remarks.append(" Failed Records : ").append(failRecords);
 			}
 
 			try {
-				txStatus = transactionManager.getTransaction(txDef);
-
 				updateHeader(headers, true);
-
-				transactionManager.commit(txStatus);
 			} catch (Exception e) {
 				logger.error(Literal.EXCEPTION, e);
-
-				if (txStatus != null) {
-					transactionManager.rollback(txStatus);
-				}
-			} finally {
-				txStatus = null;
 			}
 
 		}).start();
@@ -137,17 +140,16 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 
 	@Override
 	public void doReject(List<FileUploadHeader> headers) {
-		List<Long> headerIdList = headers.stream().map(FileUploadHeader::getId).collect(Collectors.toList());
+		List<Long> headerIdList = headers.stream().map(FileUploadHeader::getId).toList();
 
-		DefaultTransactionDefinition txDef = new DefaultTransactionDefinition(
-				TransactionDefinition.PROPAGATION_REQUIRES_NEW);
-		TransactionStatus txStatus = null;
+		TransactionStatus txStatus = getTransactionStatus();
 		try {
-			txStatus = transactionManager.getTransaction(txDef);
-
 			mandateUploadDAO.update(headerIdList, ERR_CODE, ERR_DESC, EodConstants.PROGRESS_FAILED);
 
-			headers.forEach(h1 -> h1.setRemarks(ERR_DESC));
+			headers.forEach(h1 -> {
+				h1.setRemarks(ERR_DESC);
+				h1.getUploadDetails().addAll(mandateUploadDAO.loadRecordData(h1.getId()));
+			});
 			updateHeader(headers, false);
 
 			transactionManager.commit(txStatus);
@@ -162,16 +164,7 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 
 	@Override
 	public void doValidate(FileUploadHeader header, Object detail) {
-
-		MandateUpload mu = null;
-
-		if (detail instanceof MandateUpload) {
-			mu = (MandateUpload) detail;
-		}
-
-		if (mu == null) {
-			throw new AppException("Invalid Data transferred...");
-		}
+		MandateUpload mu = getDetail(detail);
 
 		Mandate mandate = mu.getMandate();
 
@@ -190,24 +183,16 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 		InstrumentType instrumentType = InstrumentType.getType(mandate.getMandateType());
 
 		switch (instrumentType) {
-		case ECS:
-		case DD:
-		case NACH:
-		case EMANDATE:
-
+		case ECS, DD, NACH, EMANDATE:
 			externalMandateRequired(mu, mandate, extMndt);
-
 			swapMandateRequired(mu, mandate, swapMndt);
-
 			openMandateRequired(mu, mandate, openMndt);
 
 			break;
 
-		case SI:
-		case DAS:
+		case SI, DAS:
 			swapMandateRequired(mu, mandate, swapMndt);
 			break;
-
 		default:
 			break;
 		}
@@ -262,7 +247,7 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 	}
 
 	@Override
-	public void validate(DataEngineAttributes attributes, MapSqlParameterSource record) throws Exception {
+	public void validate(DataEngineAttributes attributes, MapSqlParameterSource paramSource) throws Exception {
 		logger.debug(Literal.ENTERING);
 
 		Long headerID = ObjectUtil.valueAsLong(attributes.getParameterMap().get("HEADER_ID"));
@@ -275,41 +260,41 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 
 		MandateUpload detail = new MandateUpload();
 
-		detail.setReference(ObjectUtil.valueAsString(record.getValue("orgReference")));
+		detail.setReference(ObjectUtil.valueAsString(paramSource.getValue("orgReference")));
 
 		Mandate mndts = new Mandate();
 
-		mndts.setCustCIF(ObjectUtil.valueAsString(record.getValue("custCIF")));
-		mndts.setMandateRef(ObjectUtil.valueAsString(record.getValue("mandateRef")));
-		mndts.setMandateType(ObjectUtil.valueAsString(record.getValue("mandateType")));
-		mndts.setAccNumber(ObjectUtil.valueAsString(record.getValue("accNumber")));
-		mndts.setAccHolderName(ObjectUtil.valueAsString(record.getValue("accHolderName")));
-		mndts.setJointAccHolderName(ObjectUtil.valueAsString(record.getValue("jointAccHolderName")));
-		mndts.setAccType(ObjectUtil.valueAsString(record.getValue("accType")));
-		mndts.setStrOpenMandate(ObjectUtil.valueAsString(record.getValue("openMandate")));
-		mndts.setStartDate(ObjectUtil.valueAsDate(record.getValue("startDate")));
-		mndts.setExpiryDate(ObjectUtil.valueAsDate(record.getValue("expiryDate")));
-		mndts.setMaxLimit(ObjectUtil.valueAsBigDecimal(record.getValue("maxLimit")));
-		mndts.setPeriodicity(ObjectUtil.valueAsString(record.getValue("periodicity")));
-		mndts.setStatus(ObjectUtil.valueAsString(record.getValue("mandateStatus")));
-		mndts.setReason(ObjectUtil.valueAsString(record.getValue("reason")));
-		mndts.setStrSwapIsActive(ObjectUtil.valueAsString(record.getValue("swapIsActive")));
-		mndts.setEntityCode(ObjectUtil.valueAsString(record.getValue("entityCode")));
-		mndts.setPartnerBankId(ObjectUtil.valueAsLong(record.getValue("partnerBankId")));
-		mndts.seteMandateSource(ObjectUtil.valueAsString(record.getValue("eMandateSource")));
-		mndts.seteMandateReferenceNo(ObjectUtil.valueAsString(record.getValue("eMandateReferenceNo")));
-		mndts.setSwapEffectiveDate(ObjectUtil.valueAsDate(record.getValue("swapEffectiveDate")));
-		mndts.setEmployerID(ObjectUtil.valueAsLong(record.getValue("employerID")));
-		mndts.setEmployeeNo(ObjectUtil.valueAsString(record.getValue("employeeNo")));
-		mndts.setIFSC(ObjectUtil.valueAsString(record.getValue("iFSC")));
-		mndts.setMICR(ObjectUtil.valueAsString(record.getValue("mICR")));
-		mndts.setStrExternalMandate(ObjectUtil.valueAsString(record.getValue("externalMandate")));
-		mndts.setStrSecurityMandate(ObjectUtil.valueAsString(record.getValue("securityMandate")));
+		mndts.setCustCIF(ObjectUtil.valueAsString(paramSource.getValue("custCIF")));
+		mndts.setMandateRef(ObjectUtil.valueAsString(paramSource.getValue("mandateRef")));
+		mndts.setMandateType(ObjectUtil.valueAsString(paramSource.getValue("mandateType")));
+		mndts.setAccNumber(ObjectUtil.valueAsString(paramSource.getValue("accNumber")));
+		mndts.setAccHolderName(ObjectUtil.valueAsString(paramSource.getValue("accHolderName")));
+		mndts.setJointAccHolderName(ObjectUtil.valueAsString(paramSource.getValue("jointAccHolderName")));
+		mndts.setAccType(ObjectUtil.valueAsString(paramSource.getValue("accType")));
+		mndts.setStrOpenMandate(ObjectUtil.valueAsString(paramSource.getValue("openMandate")));
+		mndts.setStartDate(ObjectUtil.valueAsDate(paramSource.getValue("startDate")));
+		mndts.setExpiryDate(ObjectUtil.valueAsDate(paramSource.getValue("expiryDate")));
+		mndts.setMaxLimit(ObjectUtil.valueAsBigDecimal(paramSource.getValue("maxLimit")));
+		mndts.setPeriodicity(ObjectUtil.valueAsString(paramSource.getValue("periodicity")));
+		mndts.setStatus(ObjectUtil.valueAsString(paramSource.getValue("mandateStatus")));
+		mndts.setReason(ObjectUtil.valueAsString(paramSource.getValue("reason")));
+		mndts.setStrSwapIsActive(ObjectUtil.valueAsString(paramSource.getValue("swapIsActive")));
+		mndts.setEntityCode(ObjectUtil.valueAsString(paramSource.getValue("entityCode")));
+		mndts.setPartnerBankId(ObjectUtil.valueAsLong(paramSource.getValue("partnerBankId")));
+		mndts.seteMandateSource(ObjectUtil.valueAsString(paramSource.getValue("eMandateSource")));
+		mndts.seteMandateReferenceNo(ObjectUtil.valueAsString(paramSource.getValue("eMandateReferenceNo")));
+		mndts.setSwapEffectiveDate(ObjectUtil.valueAsDate(paramSource.getValue("swapEffectiveDate")));
+		mndts.setEmployerID(ObjectUtil.valueAsLong(paramSource.getValue("employerID")));
+		mndts.setEmployeeNo(ObjectUtil.valueAsString(paramSource.getValue("employeeNo")));
+		mndts.setIFSC(ObjectUtil.valueAsString(paramSource.getValue("iFSC")));
+		mndts.setMICR(ObjectUtil.valueAsString(paramSource.getValue("mICR")));
+		mndts.setStrExternalMandate(ObjectUtil.valueAsString(paramSource.getValue("externalMandate")));
+		mndts.setStrSecurityMandate(ObjectUtil.valueAsString(paramSource.getValue("securityMandate")));
 		detail.setMandate(mndts);
 
 		doValidate(header, detail);
 
-		updateProcess(header, detail, record);
+		updateProcess(header, detail, paramSource);
 
 		logger.debug(Literal.LEAVING);
 	}
